# Thesis

./: .gitignore  ideas.rtf  implementation.rtf  plan.rtf  progress.rtf
program/experiment/: CMakeLists.txt  hilo.cc  hilo.h  hilo.txt  histmetric.txt  main.cc  old.txt  projdown.cc
program/experiment/lib/: histogram.h
program/imreg/: CMakeLists.txt  Untitled 2.txt  imreg.cc  imreg.h  main.cc
program/pcf/: BUGS  CMakeCache.txt  CMakeLists.txt  CONCLUSIONS  Doxyfile  Makefile  README  TODO  Toolchain-OSX.txt  Toolchain-Windows.txt  build.sh  bunny_transf.ply  cmake_install.cmake  comet_ascii.ply  console.sh  hsimple.root  p.cc  pcf
program/pcf/add/: viewer.h
program/pcf/app/: CMakeLists.txt  glfw.h  lib.cc  lib.h  main.cc  program.h  shell.cc  shell.h  shell.tcc  tui.cc  tui.h  viewer_window.cc  viewer_window.h
program/pcf/app/programs/: camera_info.cc  export_range_point_cloud_image.cc  export_range_point_cloud_images.cc  export_txt.cc  icp_lab.cc  icp_test.cc  lib.cc  lib.h  pointscan_analysis.cc  pointscan_to_matlab.cc  pointscan_to_ply.cc  pose_test.cc  range_point_cloud_to_image.cc  reproject_range_image.cc  test.cc  view.cc
program/pcf/doc/html/: _8h_source.html  accept_8h_source.html  aligned__allocator_8h_source.html  angle_8h_source.html  annotated.html  bounding__box_8frag_8h_source.html  bounding__box_8vert_8h_source.html  camera_8h_source.html  classcv_1_1_data_type_3_01pcf_1_1rgb__color_01_4-members.html  classcv_1_1_data_type_3_01pcf_1_1rgb__color_01_4.html  classes.html  classpcf_1_1accept__point__filter-members.html  classpcf_1_1accept__point__filter.html  classpcf_1_1angle-members.html  classpcf_1_1angle.html  classpcf_1_1camera-members.html  classpcf_1_1camera.html  classpcf_1_1closest__point__correspondences-members.html  classpcf_1_1closest__point__correspondences.html  classpcf_1_1color__image-members.html  classpcf_1_1color__image.html  classpcf_1_1correlation__matrix__transformation__estimation-members.html  classpcf_1_1correlation__matrix__transformation__estimation.html  classpcf_1_1crop__point__filter-members.html  classpcf_1_1crop__point__filter.html  classpcf_1_1default__allocator-members.html  classpcf_1_1default__allocator.html  classpcf_1_1gl__error-members.html  classpcf_1_1gl__error.html  classpcf_1_1gl__error__category-members.html  classpcf_1_1gl__error__category.html  classpcf_1_1gl__object-members.html  classpcf_1_1gl__object.html  classpcf_1_1grid__point__cloud-members.html  classpcf_1_1grid__point__cloud.html  classpcf_1_1grid__point__cloud_1_1cell__coordinates-members.html  classpcf_1_1grid__point__cloud_1_1cell__coordinates.html  classpcf_1_1grid__point__cloud_1_1subspace-members.html  classpcf_1_1grid__point__cloud_1_1subspace.html  classpcf_1_1grid__point__cloud_1_1subspace_1_1cell__iterator-members.html  (+266 more)
program/pcf/matlab/: import_point_cloud.m  launch.sh
program/pcf/pcf/: CMakeLists.txt  asset.cc  asset.h  generate_pcf_h.py  pcf.cc  pcf.h  point.cc  point.h  point_algorithm.h  point_algorithm.tcc  point_cloud_algorithm.h  point_full.cc  point_full.h  point_xyz.h  range_image.cc  range_image.h  rgb_color.cc  rgb_color.h  space_object.cc  space_object.h
program/pcf/pcf/camera/: camera.cc  camera.h  image_camera.cc  image_camera.h  projection_camera.cc  projection_camera.h  projection_image_camera.cc  projection_image_camera.h  range_camera.cc  range_camera.h  range_image_camera.cc  range_image_camera.h
program/pcf/pcf/geometry/: angle.cc  angle.h  bounding_box.cc  bounding_box.h  camera.cc  camera.h  frustum.cc  frustum.h  plane.cc  plane.h  pose.cc  pose.h  projection.cc  projection.h  projection_camera.cc  projection_camera.h  projection_frustum.cc  projection_frustum.h  spherical_coordinates.cc  spherical_coordinates.h
program/pcf/pcf/image/: color_image.cc  image.cc  image.h  range_image.cc  range_image.h  rgb_color_opencv.h
program/pcf/pcf_core/: CMakeLists.txt  generate_pcf_core_h.py  pcf_core.cc  pcf_core.h  point.h  point_algorithm.h  point_algorithm.tcc  point_cloud_algorithm.cc  point_cloud_algorithm.h  point_cloud_algorithm.tcc  point_full.cc  point_full.h  point_xyz.cc  point_xyz.h  rgb_color.cc  rgb_color.h  space_object.cc  space_object.h  space_object_fwd.h  space_object_observer.cc  space_object_observer.h  space_object_wrapper.h
program/pcf/pcf_experiment/: CMakeLists.txt  error_metric_range_tester.h  error_metric_tester.h  experiment.cc  experiment.h  experiment_results.h  generate_pcf_experiment_h.py  pcf_experiment.h  results.cc  results.h  run_result.cc  run_result.h
program/pcf/pcf_test/: CMakeLists.txt  bounding_box.cc  camera.cc  grid_point_cloud.cc  helper.cc  helper.h
program/pcf/pcf_viewer/: .h  CMakeLists.txt  generate_pcf_viewer_h.py  generate_shader_h.sh  gl.h  gl_error.h  gl_object.cc  gl_object.h  motion_controller.cc  motion_controller.h  pcf_viewer.cc  pcf_viewer.h  shader.cc  shader_program.cc  shader_program.h  shader_program_uniform.cc  shader_program_uniform.h  viewer.cc  viewer.h
program/pcf/root/: gl.h  initialize.C  initialize.txt  pcf_ui.cc  viewer.cc  viewer_window.C  viewer_window.cc  viewer_window.h
program/pcf/src/: asset.h  main.cc  main.s  node.h  operation.h  ply_reader.cc  ply_reader.h  ply_writer.cc  ply_writer.h  point.cc  point.h  point_cloud.h  point_cloud_alloc.h  point_cloud_array.h  point_cloud_file.h  point_cloud_mmap.h  point_full.h  point_xyz.h  range_image.cc  range_image.h  rgb_color.h  scene.h  util.cc  util.h
program/pcf/test/: bounding_box.cc  bunny.ply  camera.cc  comet.ply  cuboid.cc  cuboid.h  grid_point_cloud.cc  helper.cc  helper.d  helper.h  main.d  octree_point_cloud.cc  octree_point_cloud.d  runner.cc  spherical_coordinates.cc  test
program/pcf/unused/: GNUmakefile  NormalEstimator_developper.cpp  camera old.cc  camera.cc  image_camera.cc  image_camera.h  kdtree_point_cloud.tcc  octree_point_cloud.h  octree_point_cloud.tcc  p.cc  ply_reader.cc  ply_reader.h  ply_writer.cc  point_full.h
program/pcf/viewer/: gl.h  gl_error.h  gl_object.cc  gl_object.h  shader.h  shader_program.cc  shader_program.h  viewer.cc  viewer.h
(+592 files in other folders)
